[package]
name = "wind_process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
chrono-tz = "0.8.6"
indicatif = "0.17.8"
linya = "0.3.0"
rayon = "1.9.0"
serde = "1.0.197"
serde_json = "1.0.114"
stopwatch = "0.0.7"
